# vector-cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  output.rs
src/api/: client.rs  error.rs  mod.rs
src/commands/: account.rs  auth.rs  db.rs  deploy.rs  env.rs  event.rs  mcp.rs  mod.rs  site.rs  ssl.rs  waf.rs  webhook.rs
src/config/: mod.rs  paths.rs  store.rs
tests/: cli.rs
