[package]
name = "vector"
version = "0.2.0"
edition = "2024"
description = "CLI for Vector Pro API"
license = "MIT"
repository = "https://github.com/built-fast/vector-cli"
keywords = ["cli", "vector", "builtfast", "wordpress"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
comfy-table = "7"
thiserror = "2"
rpassword = "7"
atty = "0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"
